--- a/src/App.css
+++ b/src/App.css
@@ -23,11 +23,18 @@
   color: #61dafb;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.react-datepicker-popper {
+  z-index: 10 !important;
+}
+
+.react-datepicker__input-container > input {
+  text-align: center;
+}
+
+.dateLeft {
+  margin-right: 10px;
+}
+
+.dateRight { 
+  margin-left: 10px;
 }
