--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,27 @@
+body,html {
+  height: 100%;
+}
+
+#root {
+  height: 100%;
+}
+
 .App {
   text-align: center;
+  height: 100%;
+}
+
+.signInBody {
+  height: 100%;
+}
+
+.login {
+  margin-top: 10vh;
+  height: 100%;
+}
+
+.loginInput {
+  margin-bottom: 2vh;
 }
 
 .App-logo {
